--- a/install.txt
+++ b/install.txt
@@ -4,6 +4,6 @@
 1) Установка
 wget -qO- https://deb.nodesource.com/setup_8.x | sudo -E bash -
 sudo apt-get install -y nodejs
-npm install -g webpack-cli --save-dev
-npm uninstall -g webpack
-npm install
+sudo npm install -g webpack-cli --save-dev
+sudo npm uninstall -g webpack
+sudo npm install
